Bug 586334 - nsContentHandlerApp is not accessible from JavaScript. r=romaxa. blocking-fennec=2.0+