uriloader/exthandler/nsContentHandlerApp.cpp
@@ -43,7 +43,11 @@
 #include "nsCOMPtr.h"
 #include "nsString.h"
 
-NS_IMPL_ISUPPORTS1(nsContentHandlerApp, nsIHandlerApp)
+#define NS_CONTENTHANDLER_CID \
+{ 0x43ec2c82, 0xb9db, 0x4835, {0x80, 0x3f, 0x64, 0xc9, 0x72, 0x5a, 0x70, 0x28 } }
+
+NS_IMPL_CLASSINFO(nsContentHandlerApp, NULL, 0, NS_CONTENTHANDLER_CID)
+NS_IMPL_ISUPPORTS1_CI(nsContentHandlerApp, nsIHandlerApp)
 
 nsContentHandlerApp::nsContentHandlerApp(nsString aName, nsCString aType,
                                          ContentAction::Action& aAction) :
